<resources>
    //activity
    <string name="app_name">JobReport</string>
    <string name="customer_site">Customer</string>
    <string name="vsat_parameter">Parameter</string>
    <string name="xpoll">XPOLL</string>
    <string name="replace_activity">Replace</string>
    <string name="datam2m_activity">Data M2M</string>

    //button
    <string name="persmission_button">Izinkan</string>
    <string name="permission_rationale_settings_button_text">PENGATURAN</string>
    <string name="all_permissions_denied_feedback">Seluruh izin dibutuhkan</string>
    <string name="permission_rationale_title">Izin ini dibutuhkan</string>
    <string name="permission_rationale_message">Izin ini dibutuhkan untuk mengakses seluruh fitur</string>
    <string name="login">Login</string>

    //global content
    <string name="empty_data">Tidak ada data</string>
    <string name="username">Username</string>
    <string name="servicePoint">Service Point</string>
    <string name="no_handphone">No Handphone</string>
    <string name="login_form">LOGIN JOB REPORT</string>
    <string name="content_desc"></string>
    <string name="transaction_success">Transaksi Berhasil</string>
    <string name="transaction_success_updated">Transaksi Berhasil diupdate</string>
    <string name="add_user_title">Add user / Change Password</string>
    <string name="name_user">Nama User</string>

    //notes
    <string name="notes">Welcome To Job Report</string>
    <string name="notes_2">Job Report bertujuan yang untuk memudahkan penyampaian laporan ke admin langsung menggunakan aplikasi</string>
    <string name="notes_3">Copyright @ 2019 dracooCorp</string>
    <string name="notes_4">* Mohon nama tipe image tidak lebih dari dua suku kata</string>

    //validation
    <string name="emptyString">Mohon diisi data yang kosong</string>
    <string name="name_validation">"Mohon nama tidak menggunakan spesial karakter"</string>
    <string name="phone_validation">"Mohon isi no telp dengan benar"</string>
    <string name="customer_validation">"Mohon diinput Customer dahulu pada menu Dashboard"</string>
    <string name="connection_validation">"Mohon diinput Connection Type dahulu"</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edit_menu">Edit</string>

    //dash_content
    <string name="pm_radio">PM</string>
    <string name="cm_radio">CM</string>
    <string name="progress">Progress</string>
    <string name="job_desc">Job Desc</string>
    <string name="name">Nama Teknisi</string>
    <string name="service_point">Service Point</string>
    <string name="phone">No Hp Teknisi</string>
    <string name="pic">Nama Pic</string>
    <string name="jabatan">Jabatan</string>
    <string name="phone_pic">No Hp PIC</string>
    <string name="info_site">Info Site</string>
    <string name="location_name">Nama Lokasi</string>
    <string name="customer">Customer</string>
    <string name="remote_address">Remote Address</string>
    <string name="remote_name">Remote Name</string>
    <string name="city">Kota</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="proviency">Propinsi</string>
    <string name="lat">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="ttwo">TT / WO</string>

    //problem content
    <string name="display_modem">Display Modem</string>
    <string name="problem_symtoms">Problem Symtoms</string>
    <string name="action_taken">Action Taken</string>
    <string name="berangkat">Berangkat</string>
    <string name="tiba">Tiba</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="upline">Upline</string>
    <string name="online">Online</string>
    <string name="pending">Pending</string>
    <string name="delay">Delay</string>
    <string name="reason_pending">Reason Pending</string>
    <string name="activity_pending">Pending Kegiatan</string>
    <string name="closed">Closed</string>
    <string name="by">By</string>
    <string name="rb_eos">EOS</string>
    <string name="rb_noc">NOC</string>
    <string name="restart">Start Ulang</string>

    //electrical env content
    <string name="pln">PLN</string>
    <string name="ups">UPS</string>
    <string name="ac">AC</string>
    <string name="tegangan">Tegangan (Vac.)</string>
    <string name="grounding">Grounding (Vac.)</string>
    <string name="suhu">Suhu (Celsius.)</string>
    <string name="notes_env">Catatan</string>

    //machine content
    <string name="machine_location">Lokasi Mesin</string>
    <string name="machine_qty">Jumlah Mesin</string>
    <string name="machine_id">Id Mesin</string>
    <string name="access">Akses</string>
    <string name="rb_sendiri">Sendiri</string>
    <string name="rb_center">Center</string>
    <string name="rb_machine_1">1</string>
    <string name="rb_machine_2">2</string>
    <string name="rb_machine_3">3</string>
    <string name="rb_machine_id1">Id Machine 1</string>
    <string name="rb_machine_id2">Id Machine 2</string>
    <string name="rb_machine_id3">Id machine 3</string>
    <string name="rb_machine_24">24 Jam</string>
    <string name="rb_machine_not24">Tidak 24 Jam</string>

    //connection type
    <string name="conn_type">Jenis Koneksi</string>
    <string name="vsat">VSAT</string>
    <string name="m2m">M2M</string>
    <string name="io_equipment">I/O Equipment</string>
    <string name="sn_modem">S/N Modem</string>
    <string name="sn_adaptor">S/N Adaptor</string>
    <string name="sn_fh">S/N FH</string>
    <string name="sn_lnb">S/N LNB</string>
    <string name="sn_rfu">S/N RFU</string>
    <string name="sn_diplexer_odu">S/N Diplexer ODU</string>
    <string name="sn_diplexer_idu">S/N Diplexer IDU</string>
    <string name="diameter_antena">Diameter Antena</string>
    <string name="antena_type">Antena Tipe</string>
    <string name="antena_brand">Merk Antena</string>
    <string name="pedestal_type">Pedestal Type</string>
    <string name="access_antena">Akses Antena</string>
    <string name="brand_type">Brand/Type</string>
    <string name="m2m_sn">S/N</string>
    <string name="m2m_adaptor">M2M Adaptor</string>
    <string name="sim_card1">SimCard1</string>
    <string name="sim_card2">SimCard2</string>
    <string name="puk">PUK</string>
    <string name="conn_12m">1.2 M</string>
    <string name="conn_18m">1.8 M</string>
    <string name="conn_24m">2.4 M</string>
    <string name="rb_nprm">NPRM</string>
    <string name="rb_wallmount">PRM Wallmount</string>
    <string name="rb_groundmount">PRM Groundmount</string>

    //data m2m content
    <string name="password">Password</string>
    <string name="ip_machine">Ip Machine</string>
    <string name="m2m_user">User</string>
    <string name="m2m_remote">Remote</string>
    <string name="tunnel_id">Tunnel Id</string>
    <string name="ip_bounding">IP Bounding</string>
    <string name="ip_vlan">IP VLAN</string>
    <string name="ip_lan">IP Lan</string>
    <string name="ip_bouding">IP Bounding</string>
    <string name="subnetMask">SubnetMask</string>
    <string name="agg">AGG</string>

    //xpoll content
    <string name="sat">SAT</string>
    <string name="transponder">Transponder</string>
    <string name="lft">LFT</string>
    <string name="cn">C/N</string>
    <string name="cpi">CPI</string>
    <string name="ASI">ASI</string>
    <string name="date_time">DATE,TIME</string>
    <string name="op">OP</string>
    <string name="t3s">T3S</string>
    <string name="apt6">APT6</string>
    <string name="apt9">APT9</string>

    //parameter content
    <string name="lan_parameter">LAN Parameter</string>
    <string name="sat_parameter">SAT Parameter</string>
    <string name="manag_parameter">Management Parameter</string>
    <string name="ranging_parameter">Ranging Parameter</string>
    <string name="rb_lan_param_1">255.255.255.248</string>
    <string name="rb_lan_param_2">255.255.255.252</string>
    <string name="rb_lan_param_3">255.255.255.0</string>
    <string name="param_long">Long</string>
    <string name="param_symRate">SymRate</string>
    <string name="param_freq">Freq</string>
    <string name="param_esn">ESN</string>
    <string name="param_gateway">Gateway</string>
    <string name="param_snmp">SNMP</string>
    <string name="param_signal">Signal</string>
    <string name="param_data_rate">Data Rate</string>
    <string name="param_fec">FEC</string>
    <string name="param_pow_setting">Final Power Setting</string>
    <string name="param_ESNO">Final ESNO</string>
    <string name="param_cno">Final C/NO</string>

    //tranhistory content
    <string name="jobDesc_trans">Job Desc</string>
    <string name="infoSite_trans">Info Site</string>
    <string name="problemDesc_trans">Problem Desc</string>
    <string name="electEnv_trans">Electrical Environtment</string>
    <string name="machine_trans">Machine</string>
    <string name="ioVSAT_trans">IO VSAT</string>
    <string name="repVSAT_trans">Replace VSAT</string>
    <string name="ioM2M_trans">IO M2M</string>
    <string name="repM2M_trans">M2M Replace</string>
    <string name="dataM2m_trans">Data M2M</string>
    <string name="xpoll_trans">XPOLL</string>
    <string name="networkParam_trans">Network Parameter</string>
    <string name="doc_trans">Documentation</string>
    <string name="action_trans">Action</string>
    <string name="signature_trans">Signature</string>

    //doc_content
    <string name="imageType">Tipe Image</string>
    <string name="description">Deskripsi</string>

    //action content
    <string name="desc_action">Deskripsi</string>
    <string name="action_start">Dari tanggal</string>
    <string name="action_end">Sampai tanggal</string>

    //sign content
    <string name="sign_here">Tanda Tangan Disini</string>

</resources>
