<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGray200"
    android:orientation="vertical"
    tools:context=".feature.machine.MachineFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="4dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="1dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="7dp"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/machine_location"
                    android:layout_marginStart="@dimen/spacing_tiny_2"
                    android:layout_gravity="center"/>

                <RadioGroup
                    android:padding="@dimen/spacing_tiny"
                    android:id="@+id/rg_machine_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_machine_sendiri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:text="@string/rb_sendiri"/>

                    <RadioButton
                        android:id="@+id/rb_machine_center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:text="@string/rb_center"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:layout_marginStart="@dimen/spacing_tiny_2"
                    android:text="@string/machine_qty"
                    android:layout_gravity="center"/>

                <RadioGroup
                    android:padding="@dimen/spacing_tiny"
                    android:id="@+id/rg_machine_qty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_machine1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:text="@string/rb_machine_1"/>

                    <RadioButton
                        android:id="@+id/rb_machine2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:text="@string/rb_machine_2"/>

                    <RadioButton
                        android:id="@+id/rb_machine3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:text="@string/rb_machine_3"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_bottom"
                    android:textColorHint="@color/colorBlack"
                    android:hint="@string/machine_id">

                    <EditText
                        android:id="@+id/txt_machine_idMachine"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/transparent"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789qwertyuiopasdfghjklzxcvbnm/_,.()!? "
                        android:textColor="@color/colorBlack"
                        android:drawableLeft="@drawable/ic_black_setting_16"
                        android:textColorLink="@color/colorWhite"
                        android:inputType="text"
                        android:maxLength="45"
                        android:maxLines="2"
                        android:background="@drawable/noborder"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:layout_marginStart="@dimen/spacing_tiny_2"
                    android:text="@string/access"
                    android:layout_gravity="center"/>

                <RadioGroup
                    android:padding="@dimen/spacing_tiny"
                    android:id="@+id/rg_machine_24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_machine_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:text="@string/rb_machine_24"/>

                    <RadioButton
                        android:id="@+id/rb_machine_not24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:text="@string/rb_machine_not24"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_semi_medium"
                android:gravity="end"
                android:layout_marginBottom="@dimen/spacing_small_1"
                android:orientation="horizontal">

                <ImageButton
                    android:contentDescription="@string/content_desc"
                    android:id="@+id/imgB_machine_submit"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="@dimen/spacing_small_1"
                    android:background="@drawable/ic_circle_selector"
                    android:src="@drawable/ic_save_24"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>





</LinearLayout>