<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:background="@color/colorBlueMantab"
        android:textColor="@color/colorWhite"
        android:text="@string/add_user_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_marginStart="@dimen/spacing_tiny_2"
        android:layout_marginEnd="@dimen/spacing_tiny_2"
        android:layout_marginBottom="@dimen/spacing_tiny_2">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/username"
                android:id="@+id/txt_alert_un"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawableLeft="@drawable/ic_user_16"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789qwertyuiopasdfghjklzxcvbnm/_,.()!? "
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="2"
                android:textColor="@color/colorBlack"
                android:textColorLink="@color/colorWhite"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                custom:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/spacing_tiny_2"
                android:hint="@string/password"
                android:id="@+id/txt_alert_pass"
                android:drawableLeft="@drawable/ic_user_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textColorHighlight="@color/colorWhite"
                android:textColor="@color/colorBlack"
                android:textColorLink="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/name_user"
                android:id="@+id/txt_alert_name"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/spacing_tiny_2"
                android:layout_height="45dp"
                android:drawableLeft="@drawable/ic_user_16"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789qwertyuiopasdfghjklzxcvbnm/_,.()!? "
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="2"
                android:textColor="@color/colorBlack"
                android:textColorLink="@color/colorWhite"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</LinearLayout>