<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray200"
    android:orientation="vertical"
    tools:context=".feature.dashboard.DashboardFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_userAct_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="4dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="1dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="7dp"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_tiny">

                <TextView
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/location_name" />

                <TextView
                    android:id="@+id/lbl_dash_locationName"
                    android:layout_width="100dp"
                    android:layout_height="35dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_tiny">

                <TextView
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/lbl_dash_technician_name"
                    android:layout_width="100dp"
                    android:layout_height="35dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_tiny">

                <TextView
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/customer" />

                <TextView
                    android:id="@+id/lbl_dash_customer"
                    android:layout_width="100dp"
                    android:layout_height="35dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_tiny">

                <TextView
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_pic" />

                <TextView
                    android:id="@+id/lbl_dash_picPhone"
                    android:layout_width="100dp"
                    android:layout_height="35dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_semi_medium"
                android:gravity="end"
                android:layout_marginBottom="@dimen/spacing_small_1"
                android:orientation="horizontal">

                <ImageButton
                    android:contentDescription="@string/content_desc"
                    android:id="@+id/imgB_problem_submit"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="@dimen/spacing_small_1"
                    android:background="@drawable/ic_circle_selector"
                    android:src="@drawable/ic_truck_32"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rc_dash_activity"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>